fix: remove unwanted scrollbar in the save query dialog

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -2330,6 +2330,7 @@ div#save-queries {
     height: 90px !important;
     margin: 16px !important;
     padding: 0 !important;
+    overflow-x: hidden;
 }
 
 div#download-info {
